deploy/01-recipe-parser-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: recipe-parser
  labels:
    app: recipe-parser

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-parser
  namespace: recipe-parser
  labels:
    app: recipe-parser
spec:
  selector:
    matchLabels:
      app: recipe-parser
  replicas: 1
  template:
    metadata:
      labels:
        app: recipe-parser
    spec:
      imagePullSecrets:
        - name: github-secret
      containers:
        - name: recipe-parser
          image: ghcr.io/juuwel/recipe-parser:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: db-storage
              mountPath: /app/data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: recipe-parser-db
