deploy/02-recipe-parser-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipe-parser
  namespace: recipe-parser

spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 8000
  selector:
    app: recipe-parser
