deploy/03-recipe-parser-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: recipe-parser-ingress
    namespace: recipe-parser
spec:
    entryPoints:
      - websecure
    routes:
        - match: Host(`recipe.buchtik.top`) && PathPrefix(`/webhook`)
          kind: Rule
          priority: 100
          services:
            - name: recipe-parser
              port: 80
        - match: Host(`recipe.buchtik.top`) && PathPrefix(`/`)
          kind: Rule
          services:
            - name: recipe-parser
              port: 80
          middlewares:
            - name: basic-auth
    tls:
      certResolver: le
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: basic-auth
  namespace: recipe-parser
spec:
  basicAuth:
    secret: basic-auth
